Fix scrolling on mobile devices

--- a/content/themes/foxy-panda/assets/sass/partials/_content.sass
+++ b/content/themes/foxy-panda/assets/sass/partials/_content.sass
@@ -5,9 +5,9 @@
 .foxy-content
   max-width: $width-default
   padding: $cell / 2
-  min-height: 100%
-  overflow: hidden
-  margin: auto
+  //min-height: 100%
+  //overflow: hidden
+  margin: 0 auto
   &-bar
     &-block
       display: inline-block
@@ -42,6 +42,7 @@
   &:hover, &.current
     background-color: $bg-dark
   &.current
+    font-weight: normal
     color: $brand-blue
 
 
