--- a/content/themes/foxy-panda/assets/sass/partials/_grid.sass
+++ b/content/themes/foxy-panda/assets/sass/partials/_grid.sass
@@ -3,7 +3,6 @@
 @import "compass"
 
 .foxy-grid
-  min-height: 100%
   &-filter
     font-weight: 600
   &-sizer
